# PopcornMind

./: .gitignore  .gitmodules  Cargo.toml
src/: main.py  main.rs
src/generation/text/: talker.py
src/model/: api_response.rs  chat_gpt.rs  client.rs  mod.rs
