[package]
name = "PopcornMind"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv ="0.7.1"
# Cargo.toml
tokyo = "1.0.0"
reqwest = { version = "0.12.15", features = ["json", "blocking", "rustls-tls"] }
serde_json = "1.0.140"
async-trait = "0.1.88"
futures = "0.3.31"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
